[package]
name = "openai-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.2"
http = "1.1.0"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
futures = "0.3.30"
rustls = "0.23.13"
axum = { version = "0.7.7", features = ["ws"] }
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-webpki-roots",
    "url",
] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
